ALM-295 fixed Preview List page spacing

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -752,10 +752,12 @@ select {
 /* 5.7. Preview-list
    ========================================================================== */
 
-.preview-form {
+.preview-list {
   width: 628px;
   margin: 45px 0 0 38px;
+  position: relative;
   display: inline-block;
+  min-height: 330px;
 }
 
 .preview-form h2 {
@@ -767,8 +769,11 @@ select {
   color: #333;
 }
 
-/* TODO  this selector doesn't work (due to hidden elements genearted by ruby on rails */
-.preview-form p + .article-info {
+/*
+  this selector might break in the future.  (due to hidden elements genearted by ruby on rails)
+  If the hidden element generated by ruby on rails changes, this will break.
+*/
+.preview-form meta + .article-info {
   margin: 47px 0  21px 42px;
 }
 
@@ -794,7 +799,7 @@ select {
    ========================================================================== */
 
 .article-lists {
-  width: 635px;
+  width: 628px;
   margin: 45px 0 0 38px;
   position: relative;
   display: inline-block;
